--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -69,3 +69,9 @@
     border-radius: 5px;
     font-size: 15px
 }
+.loader-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 500px;
+}
